--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "gulp-uglify": "~0.3.1",
     "gulp-zip": "~2.0.1",
     "requirejs": "~2.1.14",
-    "karma-requirejs": "~0.2.2"
+    "karma-requirejs": "~0.2.2",
+    "jasmine-jquery": "~1.3.3",
+    "sinon": "~1.10.3",
+    "jquery": "~2.1.1"
   }
 }
