--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   },
   "author": "",
   "devDependencies": {
-    "gulp": "~3.8.7",
-    "karma": "~0.12.21",
-    "karma-jasmine": "~0.1.5",
-    "karma-chrome-launcher": "~0.1.4",
-    "gulp-requirejs": "~0.1.3",
     "almond": "~0.2.9",
+    "gulp": "~3.8.7",
+    "gulp-requirejs": "~0.1.3",
     "gulp-uglify": "~0.3.1",
     "gulp-zip": "~2.0.1",
-    "requirejs": "~2.1.14",
+    "jasmine-jquery": "~2.0.5",
+    "jquery": "~2.1.1",
+    "karma": "~0.12.21",
+    "karma-chrome-launcher": "~0.1.4",
+    "karma-jasmine": "~0.2.0",
     "karma-requirejs": "~0.2.2",
-    "jasmine-jquery": "~1.3.3",
-    "jquery": "~2.1.1"
+    "requirejs": "~2.1.14"
   }
 }
