--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "requirejs": "~2.1.14",
     "gulp-jshint": "~1.8.4",
     "jshint-stylish": "~0.4.0",
-    "karma-coverage": "~0.2.6"
+    "karma-coverage": "~0.2.6",
+    "gulp-minify-css": "~0.3.8",
+    "gulp-minify-html": "~0.1.5",
+    "gulp-html-replace": "~1.3.0"
   }
 }
