Fix bad variables and correct JSLint config to catch others.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,9 @@
 {
-    
+    "undef": true,
+    "unused": true,
+    "predef": [
+        "window", "document", "localStorage", "AudioContext", "Float32Array",
+        "requirejs", "define", "require",
+        "jasmine", "describe", "it", "expect", "beforeEach", "afterEach"
+    ]
 }
