--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "karma-coverage": "~0.2.6",
     "gulp-minify-css": "~0.3.8",
     "gulp-minify-html": "~0.1.5",
-    "gulp-html-replace": "~1.3.0"
+    "gulp-html-replace": "~1.3.0",
+    "karma-firefox-launcher": "~0.1.3"
   }
 }
