--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-minify-css": "~0.3.8",
     "gulp-minify-html": "~0.1.5",
     "gulp-html-replace": "~1.3.0",
-    "karma-firefox-launcher": "~0.1.3"
+    "karma-firefox-launcher": "~0.1.3",
+    "gulp-jscs": "~1.1.2"
   }
 }
