--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-minify-html": "~0.1.5",
     "gulp-html-replace": "~1.3.0",
     "karma-firefox-launcher": "~0.1.3",
-    "gulp-jscs": "~1.1.2"
+    "gulp-jscs": "~1.1.2",
+    "gulp-filter": "~1.0.2"
   }
 }
